--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ a:hover {
 
 .card-img-top {
   cursor: pointer;
-  margin: 2em;
+  margin: 0.75em;
   border: 3px double #da77a5;
   border-radius: 5px;
 }
@@ -101,6 +101,7 @@ ul {
 }
 
 .bxs-message-square-add {
+  color: #da77a5;
   cursor: pointer;
   font-size: 3em;
   text-align: right;
@@ -164,7 +165,6 @@ h3 {
 
 #infoProducto > p {
   text-align: justify;
-  padding-right: 3em;
 }
 
 #infoProducto > span {
@@ -207,5 +207,9 @@ h3 {
     grid-column: 2 / 3;
     justify-self: center;
     align-self: center;
+  }
+
+  #infoProducto > p {
+    padding-right: 3em;
   }
 }
